Turn Java deserialization codemod into a composed codemod (#101)
I added the ability to create a codemod that is based on composing
multiple `CodeChanger` types. This was mainly to fix a false negative we
found in beta code. This will allow us to have a single reporting
structure for multiple "code shapes".

Some cleanup done along the way:

* Bumped to Java 17, which allows us to use multiline strings that make
our inline Semgrep much easier to read.
* Added a missing test for SecureRandomCodemod, for some reason we
didn't have one?
* Replaced `UselessReporter` with a new empty reporter that can be used
in tests and composed codemods when you don't need reporting for your
sub-`CodeChanger` types.